Add cancel payment option
